--- a/es-statefulset.yaml
+++ b/es-statefulset.yaml
@@ -1,49 +1,3 @@
-# RBAC authn and authz
-apiVersion: v1
-kind: ServiceAccount
-metadata:
-  name: elasticsearch-logging
-  namespace: efklog
-  labels:
-    k8s-app: elasticsearch-logging
-    addonmanager.kubernetes.io/mode: Reconcile
----
-kind: ClusterRole
-apiVersion: rbac.authorization.k8s.io/v1
-metadata:
-  name: elasticsearch-logging
-  labels:
-    k8s-app: elasticsearch-logging
-    addonmanager.kubernetes.io/mode: Reconcile
-rules:
-- apiGroups:
-  - ""
-  resources:
-  - "services"
-  - "namespaces"
-  - "endpoints"
-  verbs:
-  - "get"
----
-kind: ClusterRoleBinding
-apiVersion: rbac.authorization.k8s.io/v1
-metadata:
-  namespace: efklog
-  name: elasticsearch-logging
-  labels:
-    k8s-app: elasticsearch-logging
-    addonmanager.kubernetes.io/mode: Reconcile
-subjects:
-- kind: ServiceAccount
-  name: elasticsearch-logging
-  namespace: efklog
-  apiGroup: ""
-roleRef:
-  kind: ClusterRole
-  name: elasticsearch-logging
-  apiGroup: ""
----
-# Elasticsearch deployment itself
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
@@ -52,7 +6,6 @@ metadata:
   labels:
     k8s-app: elasticsearch-logging
     version: v7.3.2
-    addonmanager.kubernetes.io/mode: Reconcile
 spec:
   serviceName: elasticsearch-logging
   replicas: 2
@@ -68,41 +21,49 @@ spec:
     spec:
       serviceAccountName: elasticsearch-logging
       containers:
-      - image: quay.io/fluentd_elasticsearch/elasticsearch:v7.3.2
-        name: elasticsearch-logging
-        imagePullPolicy: Always
-        resources:
-          # need more cpu upon initialization, therefore burstable class
-          limits:
-            cpu: 500m
-            memory: 3Gi
-          requests:
-            cpu: 100m
-            memory: 1Gi
-        ports:
-        - containerPort: 9200
-          name: db
-          protocol: TCP
-        - containerPort: 9300
-          name: transport
-          protocol: TCP
-        volumeMounts:
-        - name: elasticsearch-logging
-          mountPath: /data
+      - name: elasticsearch-logging
+        image: docker.elastic.co/elasticsearch/elasticsearch:7.3.2
+        imagePullPolicy: IfNotPresent
+
         env:
-        - name: "NAMESPACE"
+        - name: cluster.name
+          value: elasticsearch-logging
+        - name: node.name
           valueFrom:
             fieldRef:
-              fieldPath: metadata.namespace
+              fieldPath: metadata.name
+        - name: discovery.seed_hosts
+          value: elasticsearch-logging
+        - name: cluster.initial_master_nodes
+          value: elasticsearch-logging-0,elasticsearch-logging-1
+        - name: ES_JAVA_OPTS
+          value: "-Xms1g -Xmx1g"
+
+        resources:
+          limits:
+            cpu: 1000m
+            memory: 2Gi
+          requests:
+            cpu: 500m
+            memory: 1Gi
+
+        ports:
+        - containerPort: 9200
+          name: http
+        - containerPort: 9300
+          name: transport
+
+        volumeMounts:
+        - name: elasticsearch-data
+          mountPath: /usr/share/elasticsearch/data
+
       volumes:
-      - name: elasticsearch-logging
+      - name: elasticsearch-data
         emptyDir: {}
-      # Elasticsearch requires vm.max_map_count to be at least 262144.
-      # If your OS already sets up this number to a higher value, feel free
-      # to remove this init container.
+
       initContainers:
-      - image: alpine:3.6
-        command: ["/sbin/sysctl", "-w", "vm.max_map_count=262144"]
-        name: elasticsearch-logging-init
+      - name: elasticsearch-init
+        image: alpine:3.18
+        command: ["sysctl", "-w", "vm.max_map_count=262144"]
         securityContext:
           privileged: true
