--- a/kibana-deployment.yaml
+++ b/kibana-deployment.yaml
@@ -5,7 +5,6 @@ metadata:
   namespace: efklog
   labels:
     k8s-app: kibana-logging
-    addonmanager.kubernetes.io/mode: Reconcile
 spec:
   replicas: 1
   selector:
@@ -15,28 +14,29 @@ spec:
     metadata:
       labels:
         k8s-app: kibana-logging
-      annotations:
-        seccomp.security.alpha.kubernetes.io/pod: 'docker/default'
     spec:
       containers:
       - name: kibana-logging
         image: docker.elastic.co/kibana/kibana-oss:7.3.2
+        imagePullPolicy: IfNotPresent
+
+        env:
+        - name: ELASTICSEARCH_HOSTS
+          value: http://elasticsearch-logging.efklog.svc.cluster.local:9200
+        - name: SERVER_NAME
+          value: kibana-logging
+        - name: SERVER_REWRITEBASEPATH
+          value: "false"
+
         resources:
-          # need more cpu upon initialization, therefore burstable class
+          requests:
+            cpu: 200m
+            memory: 512Mi
           limits:
             cpu: 1000m
-          requests:
-            cpu: 100m
-        env:
-          - name: ELASTICSEARCH_HOSTS
-            value: http://elasticsearch-logging:9200
-          - name: SERVER_NAME
-            value: kibana-logging
-         # - name: SERVER_BASEPATH
-         #   value: /api/v1/namespaces/efk-aks/services/kibana-logging/proxy
-          - name: SERVER_REWRITEBASEPATH
-            value: "false"
+            memory: 1Gi
+
         ports:
-        - containerPort: 5601
-          name: ui
+        - name: ui
+          containerPort: 5601
           protocol: TCP
