--- a/kibana-service.yaml
+++ b/kibana-service.yaml
@@ -5,14 +5,12 @@ metadata:
   namespace: efklog
   labels:
     k8s-app: kibana-logging
-    kubernetes.io/cluster-service: "true"
-    addonmanager.kubernetes.io/mode: Reconcile
-    kubernetes.io/name: "Kibana"
 spec:
   ports:
-  - port: 5601
-    protocol: TCP
+  - name: http
+    port: 5601
     targetPort: ui
+    protocol: TCP
   selector:
     k8s-app: kibana-logging
   type: LoadBalancer
